# template

./: .gitignore  CMakeLists.txt  Makefile
.cache/clangd/index/: macro.h.6A81C0E16587F466.idx  main.c.58AED13BFF4A4BD0.idx  math.c.DA47914C3D2AFF6B.idx  math.h.09B5A94D3E4F8330.idx  type.h.5189E16E3E0E35AF.idx  utils.h.36BC6DBE1587923D.idx
src/: main.c  type.h
src/util/: matrix.c  matrix.h  type.h  vector.h
src/utils/: macro.h  math.c  math.h  type.h  utils.h
